[package]
name = "ansi4tui"
version = "0.2.0"
authors = ["Brandon Henry <brandon@bhenry.dev>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bmhenry/ansi4tui"
documentation = "https://docs.rs/ansi4tui/"
description = """
ANSI terminal code to TUI Text Style converter
"""
keywords = ["ansi", "tui"]

[dependencies]
termwiz = "0.11.0"
tui = "0.14"

[dev-dependencies]
termion = "1.5"