[package]
authors = ["Brandon Henry <brandon@bhenry.dev>"]
description = """
ANSI terminal code to TUI Text Style converter
"""
documentation = "https://docs.rs/ansi4tui/"
edition = "2018"
keywords = ["ansi", "tui"]
license = "MIT"
name = "ansi4tui"
readme = "README.md"
repository = "https://github.com/bmhenry/ansi4tui"
version = "0.2.1"

[dependencies]
termwiz = "0.15.0"

[dev-dependencies]

[target.'cfg(any(unix, macos))'.dependencies]
crossterm = "0.22"
termion = "1.5"
tui = {version = "0.16", default-features = true, features = ['crossterm']}

[target.'cfg(any(windows))'.dependencies]
crossterm = "0.22"
tui = {version = "0.16", default-features = false, features = ['crossterm']}
